--- a/who.html
+++ b/who.html
@@ -201,7 +201,7 @@
 
       <p>© 2023 جميع الحقوق محفوظة لجمعية الامل و الحياة بالزرقا</p>
 
-      <a href="https://wa.me/+201096779303" target="_blank"> -->
+      <a href="https://wa.me/+201096779303" target="_blank"> 
       <img src="images/whatsapp (1).png" class="whatsapp" alt="" />
       </a>
 
