--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <header id="head" dir="rtl" lang="ar">
-      <h2 lang="ar">جمعية الأمل و الحياة بالزرقا</h2>
+      <a href="./index.html">  <h2 lang="ar">جمعية الأمل و الحياة بالزرقا</h2> </a>
 
       <ul dir="rtl" lang="ar" class="main-ul">
         <a class="active" href="./index.html"> <li>الرئيسية</li> </a>
@@ -47,6 +47,7 @@
           <a href="./index.html"><li>الرئيسية</li></a>
           <a href="./tawzee3.html"><li dir="rtl" lang="ar">صفحة التوزيع</li></a>
           <a href="./est3lam.html"><li dir="rtl" lang="ar">صفحة الاستعلام</li></a>
+          <a href="./who.html"><li dir="rtl" lang="ar">من نحن؟</li></a>
         </ul>
       </div>
 
