--- a/tawzee3.html
+++ b/tawzee3.html
@@ -11,7 +11,7 @@
 
   <body class="container">
     <header id="head" dir="rtl" lang="ar">
-      <h2 lang="ar">جمعية الأمل و الحياة بالزرقا</h2>
+      <a href="./index.html">  <h2 lang="ar">جمعية الأمل و الحياة بالزرقا</h2> </a>
       <ul dir="rtl" lang="ar" class="main-ul">
         <a href="./index.html"><li>الرئيسية</li></a>
         <a class="active" href="./tawzee3.html"><li dir="rtl" lang="ar">صفحة التوزيع</li></a>
@@ -53,6 +53,8 @@
         <a href="./index.html"><li>الرئيسية</li></a>
         <a href="./tawzee3.html"><li dir="rtl" lang="ar">صفحة التوزيع</li></a>
         <a href="./est3lam.html"><li dir="rtl" lang="ar">صفحة الاستعلام</li></a>
+        <a href="./who.html"><li dir="rtl" lang="ar">من نحن؟</li></a>
+
       </ul>
     </div>
     
