تعديل شوية كلام

--- a/who.html
+++ b/who.html
@@ -51,10 +51,10 @@
       <section>
 
         <p dir="rtl" lang="ar">
-          جمعية الامل و الحياة بالزرقا هي جمعية خيرية رسمية ومسجلة بوزارة
-          الموارد البشرية والتنمية الاجتماعية برقم ٤١١، تسعى للريادة في تنمية
-          المحتاج وبناء المجتمع عبر برامج تنموية ومستدامة في بيئة عمل محفزة
-          وبمصداقية عالية.
+          جمعية الامل و الحياة بالزرقا هي جمعية خيرية رسمية 
+          ومشهرة بوزارة التضامن الاجتماعي برقم ٤١١لسنه 2007 
+          على مستوى جمهورية مصر العربية، ذات نفع عام.
+          'تسعى للريادة في تنمية المحتاج وبناء المجتمع عبر برامج تنموية وخيرية مستدامة.
         </p>
 
         <br /><br /><br />
