--- a/who.html
+++ b/who.html
@@ -100,7 +100,7 @@
         <br />
       </div>
 
-      <h2>Responsive Table</h2>
+      <h2>لطلب المساعدة و التواصل عند الحاجة</h2>
       <div class="table-wrapper">
           <table class="fl-table">
               <thead>
