--- a/who.html
+++ b/who.html
@@ -59,10 +59,10 @@
 
         <br /><br /><br />
 
-        <div class="btns">
+        <!-- <div class="btns">
           <button>قرار توفيق الاوضاع</button>
           <button>شهادة تسجيل الجمعية</button>
-        </div>
+        </div> -->
 
         <div class="hr">
           <br />
