--- a/who.html
+++ b/who.html
@@ -126,13 +126,13 @@
                   </td>
               </tr>
               <tr>
-                  <td>   01003953158 <hr> 01092178993  </td>
-                  <td>   أ/محمد عصام  <hr> أ/عبدالرحمن البيومى </td>
+                  <td>   01003953158  </td>
+                  <td>   أ/محمد عصام </td>
                   <td>   لطلب تحديث البيانات الخاصة بالمستفيدين    </td>
               </tr>
               <tr>
                   <td>   01011305925 <hr> 01006424066  </td>
-                  <td>   أ/علي البراشى  <hr> أ/احمد ياسين الجزار </td>
+                  <td>   د/علي البراشى  <hr> د/احمد ياسين الجزار </td>
                   <td>   للطلبات الطبية (الكشف الطبى و الأدوية و العمليات)   </td>
               </tr>
               <tr>
@@ -152,16 +152,14 @@
               </tr>
               <tr>
                 <td>
-                    01099275516 <hr>
                     01050407376 <hr>
                     01553793071 <hr>
                     01554409048 <hr>
                     0573856103 </td>
 
                 <td>
-                    أ/رشا سلامه <hr>
                     أ/ميادة السيد <hr>
-                    أ/ملاط الصايغ <hr>
+                    أ/ملاك الصايغ <hr>
                     أ/شيماء السيد </td>
 
                 <td>  للتواصل و المتابعة بخصوص دار الامل و الحياة لرعاية كبار السن   </td>
